# AppleFastTrackPlugin

./: AppleUSBAudioPlugin.h  CMakeLists.txt  Info.plist  ProcessFloatSamples.c  ProcessFloatSamples.h  Readme.txt  SampleUSBAudioPlugin.cpp  SampleUSBAudioPlugin.h
English.lproj/: InfoPlist.strings
SampleUSBAudioPlugin.xcodeproj/: project.pbxproj
SampleUSBAudioPlugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SampleUSBAudioPlugin.xcodeproj/project.xcworkspace/xcuserdata/Brett.xcuserdatad/: UserInterfaceState.xcuserstate
SampleUSBAudioPlugin.xcodeproj/project.xcworkspace/xcuserdata/tester.xcuserdatad/: UserInterfaceState.xcuserstate
